# rag-research-analyzer

./: .env.example  .gitignore  README.md  Supabase.txt  requirements-dev.txt
docs/: DOCUMENTATION.md  LEARNING_GUIDE.md
docs/experiments/: chunker.py  embedder.py  generator.py  loader.py  main.py  rag_by_hand.py  search.py  use_ragcore.py
ragcore/: README.md  pyproject.toml
ragcore/src/ragcore/: __init__.py  chunker.py  embedders.py  llms.py  loaders.py  models.py  pipeline.py  prompts.py  stores.py
ragcore/tests/: test_chunkers.py  test_embedders.py  test_llms.py  test_loaders.py  test_models.py  test_pipeline.py  test_stores.py  test_supabase_integration.py
