[project]
name = "ragcore"
version = "0.1.0"
description = "A reusable RAG engine for research paper analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pymupdf", "google-genai", "python-dotenv"]

[project.optional-dependencies]
local = ["sentence-transformers"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["integration: requires network and credentials (deselect with '-m \"not integration\"')"]